--- a/DaLiPoker/proj.android-studio/daLiPoker/src/main/AndroidManifest.xml
+++ b/DaLiPoker/proj.android-studio/daLiPoker/src/main/AndroidManifest.xml
@@ -8,14 +8,15 @@
     <uses-sdk android:minSdkVersion="9"/>
     <uses-feature android:glEsVersion="0x00020000" />
 
-    <application android:label="@string/app_name"
+    <application android:name=".Application"
+                 android:label="@string/app_name"
                  android:icon="@drawable/icon">
 					 
         <!-- Tell Cocos2dxActivity the name of our .so -->
         <meta-data android:name="android.app.lib_name"
 	              android:value="cocos2dcpp" />
 
-        <activity android:name="org.cocos2dx.cpp.AppActivity"
+        <activity android:name="com.xinyu.game.dalipoker.AppActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
@@ -35,4 +36,4 @@
                       android:xlargeScreens="true"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
-</manifest> 
+</manifest>
